@@ -4,7 +4,6 @@ package edu.colorado.phet.faraday.control;
 
 import edu.colorado.phet.common.phetcommon.view.ControlPanel;
 import edu.colorado.phet.faraday.FaradayResources;
-import edu.colorado.phet.faraday.module.FaradayModule;
 
 
 /**
@@ -14,27 +13,18 @@ import edu.colorado.phet.faraday.module.FaradayModule;
  */
 public class FaradayControlPanel extends ControlPanel {
 
-    //----------------------------------------------------------------------------
-    // Class data
-    //----------------------------------------------------------------------------
+    // a default amount of vertical space 
+    private static final int DEFAULT_VERTICAL_SPACE = 8;
     
-    // Default amount of vertical space, see addVerticalSpace
-    public static final int DEFAULT_VERTICAL_SPACE = 8;
-    
-    //----------------------------------------------------------------------------
-    // Constructors
-    //----------------------------------------------------------------------------
-    
-    /**
-     * Sole constructor.
-     * 
-     * @param module
-     */
-    public FaradayControlPanel( FaradayModule module ) {
-        super( module );
+    public FaradayControlPanel() {
+        super();
         
         // Set the control panel's minimum width.
         int width = FaradayResources.getInt( "ControlPanel.width", 225 );
         setMinimumWidth( width );
+    }
+    
+    public void addDefaultVerticalSpace() {
+        addVerticalSpace( FaradayControlPanel.DEFAULT_VERTICAL_SPACE );
     }
 }
