@@ -163,7 +163,7 @@ public class BarMagnetModule extends FaradayModule {
         
         // Control Panel
         {
-            FaradayControlPanel controlPanel = new FaradayControlPanel( this );
+            FaradayControlPanel controlPanel = new FaradayControlPanel();
             setControlPanel( controlPanel );
             
             // Bar Magnet controls
@@ -174,7 +174,7 @@ public class BarMagnetModule extends FaradayModule {
             
             // Developer controls
             if ( PhetApplication.getInstance().isDeveloperControlsEnabled() ) {
-                controlPanel.addVerticalSpace( FaradayControlPanel.DEFAULT_VERTICAL_SPACE );
+                controlPanel.addDefaultVerticalSpace();
                 
                 DeveloperControlsPanel developerControlsPanel = new DeveloperControlsPanel( _barMagnetModel, null, null, null, null, null, null, _bFieldInsideGraphic, _bFieldOutsideGraphic );
                 controlPanel.addControlFullWidth( developerControlsPanel );
